Split PANDORA flag in GLES, ARM, NEON and CROUCH, to be able to use them separatly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,10 @@ project(jk2)
 option(PANDORA "Set to ON if targeting an OpenPandora device" ${PANDORA})
 option(JOYSTICK "Set to ON if you want Joystick support (Linux only)" ${JOYSTICK})
 option(CROUCH "Set to ON if you want Toggle Crouch" ${CROUCH})
+option(ARM "Set to ON if you want ARM specific code" ${ARM})
+option(GLES "Set to ON if you want GLES 1.1 renderer" ${GLES})
+option(AUTOAIM "Set to ON if you want Auto-aim helper" ${AUTOAIM})
+option(NEON "Set to ON if you want ARM NEON optimisations" ${NEON})
 
 set(CMAKE_BUILD_TYPE "RELEASE")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wno-write-strings -Wno-pointer-arith -Wno-multichar -Wno-int-to-pointer-cast -Wno-enum-compare -Wno-cpp -fexceptions -DLINUX -DNDEBUG -DFINAL_BUILD -ffast-math -ftree-vectorize -marm  -fcx-fortran-rules -fstrict-aliasing -Wdouble-promotion -Ofast")
@@ -27,7 +31,19 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-narrowing")
 #set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -flto -fuse-linker-plugin")
 #set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -flto -fuse-linker-plugin")
 if(PANDORA)
-	add_definitions(-DPANDORA -DHAVE_GLES -DARM -DNEON -DAUTOAIM)
+	add_definitions(-DPANDORA)
+endif()
+if(GLES)
+	add_definitions(-DHAVE_GLES)
+endif()
+if(AUTOAIM)
+	add_definitions(-DAUTOAIM)
+endif()
+if(ARM)
+	add_definitions(-DARM)
+endif()
+if(NEON)
+	add_definitions(-DNEON)
 endif()
 if (JOYSTICK)
 	add_definitions(-DJOYSTICK)
@@ -330,13 +346,13 @@ set(STARWARS_SOURCE_FILES
 
 set (EXTRA_LIBS ${EXTRA_LIBS} dl)
 set (EXTRA_LIBS ${EXTRA_LIBS} openal)
-if(PANDORA)
+if(GLES)
 	set(EXTRA_LIBS ${EXTRA_LIBS} GLES_CM EGL)
 	set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Ofast -mcpu=cortex-a8 -mfpu=neon -mfloat-abi=softfp")
-else(PANDORA)
+else(GLES)
 	set (EXTRA_LIBS ${EXTRA_LIBS} GL)
-	set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-m32")
-endif(PANDORA)
+	#set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-m32")
+endif(GLES)
 if(JOYSTICK)
 	set (STARWARS_SOURCE_FILES ${STARWARS_SOURCE_FILES} code/linux/linux_joystick.cpp)
 endif()
