Allow building on x86

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ option(AUTOAIM "Set to ON if you want Auto-aim helper" ${AUTOAIM})
 option(NEON "Set to ON if you want ARM NEON optimisations" ${NEON})
 
 set(CMAKE_BUILD_TYPE "RELEASE")
-set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wno-write-strings -Wno-pointer-arith -Wno-multichar -Wno-int-to-pointer-cast -Wno-enum-compare -Wno-cpp -fexceptions -DLINUX -DNDEBUG -DFINAL_BUILD -ffast-math -ftree-vectorize -marm  -fcx-fortran-rules -fstrict-aliasing -Wdouble-promotion -Ofast")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-write-strings -Wno-conversion-null -Wno-pointer-arith -Wno-multichar -Wno-int-to-pointer-cast -Wno-enum-compare -Wno-cpp -fexceptions -fno-operator-names -DLINUX -DNDEBUG -DFINAL_BUILD -Wstrict-overflow=1 -ffast-math -ftree-vectorize -marm  -fcx-fortran-rules  -fstrict-aliasing -Wdouble-promotion -Ofast")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Wno-write-strings -Wno-pointer-arith -Wno-multichar -Wno-int-to-pointer-cast -Wno-enum-compare -Wno-cpp -fexceptions -DLINUX -DNDEBUG -DFINAL_BUILD -ffast-math -ftree-vectorize  -fcx-fortran-rules -fstrict-aliasing -Wdouble-promotion -Ofast")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-write-strings -Wno-conversion-null -Wno-pointer-arith -Wno-multichar -Wno-int-to-pointer-cast -Wno-enum-compare -Wno-cpp -fexceptions -fno-operator-names -DLINUX -DNDEBUG -DFINAL_BUILD -Wstrict-overflow=1 -ffast-math -ftree-vectorize -fcx-fortran-rules  -fstrict-aliasing -Wdouble-promotion -Ofast")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -fsigned-char")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fsigned-char")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wno-narrowing")
@@ -41,6 +41,12 @@ if(AUTOAIM)
 endif()
 if(ARM)
 	add_definitions(-DARM)
+	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -marm ")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -marm ")
+else()
+	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -m32 ")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -m32 ")
+	set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-m32")
 endif()
 if(NEON)
 	add_definitions(-DNEON)
