Sanitized CMakeList (so GLES option doesn't push PANDORA compile flags)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,7 +354,6 @@ set (EXTRA_LIBS ${EXTRA_LIBS} dl)
 set (EXTRA_LIBS ${EXTRA_LIBS} openal)
 if(GLES)
 	set(EXTRA_LIBS ${EXTRA_LIBS} GLES_CM EGL)
-	set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-Ofast -mcpu=cortex-a8 -mfpu=neon -mfloat-abi=softfp")
 else(GLES)
 	set (EXTRA_LIBS ${EXTRA_LIBS} GL)
 	#set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-m32")
@@ -369,8 +368,8 @@ set (EXTRA_LIBS ${EXTRA_LIBS} rt)
 set (EXTRA_LIBS ${EXTRA_LIBS} pthread)
 
 if(PANDORA)
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -fpermissive -mcpu=cortex-a8 -mfpu=neon -mfloat-abi=softfp")
-	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -Ofast -mcpu=cortex-a8 -mfpu=neon -mfloat-abi=softfp")
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -ffast-math -fpermissive -mcpu=cortex-a8 -mfpu=neon -mfloat-abi=softfp")
+	set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -ffast-math -mcpu=cortex-a8 -mfpu=neon -mfloat-abi=softfp")
 	add_definitions(-mcpu=cortex-a8)
 	add_definitions(-mfpu=neon)
 	add_definitions(-mfloat-abi=softfp)
